<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/drawer_background_color" >

    <RadioGroup
    	android:id="@+id/rg_publish_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginTop="@dimen/margin_above"
        android:layout_marginBottom="@dimen/margin_above"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        android:orientation="horizontal"
        android:background="@drawable/shape_linear"
         >

        	<RadioButton
        		android:layout_marginLeft="@dimen/margin_text"
            	android:id="@+id/type1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/rbtn_jpush_class"
                />

			<RadioButton
            	android:id="@+id/type2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/rbtn_jpush_assignment" />
			<RadioButton
            	android:id="@+id/type3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/rbtn_jpush_notify"/>
	</RadioGroup>

 
    <EditText 
    	android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        android:id="@+id/tv_publish_title"
        android:hint="@string/hint_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginTop="@dimen/margin_above"
        android:layout_marginBottom="@dimen/margin_above"
        android:background="@drawable/shape_linear"
        
        />
      <EditText
      	android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_above"
        android:layout_marginBottom="@dimen/margin_above"
        android:id="@+id/tv_publish_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/hint_content"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:background="@drawable/shape_linear"/> 
    	
     <LinearLayout
     	android:layout_width="fill_parent"
     	android:layout_marginTop="@dimen/margin_above"
     	android:layout_marginBottom="@dimen/margin_above"
     	android:layout_height="@dimen/list_item_height"
     	android:orientation="horizontal" >
        	<TextView android:id="@+id/tv_jpush_range"
        	    android:layout_width="0dp"
        	    android:layout_weight="3"
        	    android:layout_height="@dimen/list_item_height"
        	    android:layout_marginLeft="@dimen/margin_side"
        	    android:gravity="center"
        	    android:clickable="true"/>
         
         <ImageView 
             android:layout_marginRight="@dimen/margin_side"
         	 android:id="@+id/btn_publish"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:contentDescription="push sent"
             android:src="@drawable/ic_action_send"
             />
     </LinearLayout>
    
</LinearLayout>