<?xml version="1.0" encoding="utf-8"?>
<com.mredrock.redrockmanager.util.ResizedLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  	 android:focusable="true"
     >
    
   <LinearLayout android:id="@+id/ignor"
       android:orientation="vertical"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:focusableInTouchMode="true">
       <Button android:id="@+id/btn_login_cancel"
           android:text="@string/btn_login_cancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/margin_above"
           android:layout_marginTop="@dimen/margin_above"
           android:layout_gravity="left|top"/>
   </LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="2"
	    android:orientation="vertical"
	    android:gravity="center_horizontal">
       
		<ImageView android:id="@+id/icon_login_yours"
		    android:layout_width="wrap_content"
		    android:layout_height="@dimen/list_item_height"
		    android:layout_margin="@dimen/margin_text"
		    android:contentDescription="YOUR ICON"
			 android:layout_gravity="center_horizontal"
			 android:src="@drawable/ic_launcher"/>
		
		<LinearLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			 android:layout_marginTop="@dimen/margin_side"
			 android:layout_marginLeft="@dimen/margin_side"
			 android:layout_marginRight="@dimen/margin_side"
		    android:orientation="horizontal">
		    
			<EditText android:id="@+id/text_login_user"
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/font_size_medium"
			    android:padding="@dimen/margin_text"
			    android:hint="@string/hint_login_user"/>
			
			<ImageView android:id="@+id/icon_login_delete_user"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/ic_launcher"
			    android:layout_gravity="right"
			    android:contentDescription="DELETE"
			    android:visibility="invisible"/>
			
			<ImageView android:id="@+id/icon_login_switcher"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/ic_launcher"
			    android:contentDescription="SWITCH USER"/>    
		</LinearLayout>
		
	
		<LinearLayout 
		    android:layout_marginBottom="@dimen/margin_text"
			 android:layout_marginLeft="@dimen/margin_side"
			 android:layout_marginRight="@dimen/margin_side"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content">
			
			<EditText android:id="@+id/text_login_password"
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/font_size_medium"
			    android:padding="@dimen/margin_text"
			    android:hint="@string/hint_login_password"
			    android:inputType="textPassword"/>
			
			<ImageView android:id="@+id/icon_login_delete_psw"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:src="@drawable/ic_launcher"
				    android:layout_gravity="right"
				    android:contentDescription="DELETE"
				    android:visibility="invisible"/>    
		</LinearLayout>
		
		<Button android:id="@+id/btn_login"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="@dimen/margin_side"
		    android:layout_marginRight="@dimen/margin_side"
		    android:text="@string/btn_login"
		    android:gravity="center"
		    android:textSize="@dimen/font_size_medium"/>
	</LinearLayout>
	
</com.mredrock.redrockmanager.util.ResizedLayout>
